fixed menu-mobile collapse

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,7 +2,3 @@
   height: 100vh;
   background: #393A3C;
 }
-
-.particle {
-  z-index: -10;
-}
