--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -1,6 +1,5 @@
 #menu {
     position: relative;
-    z-index: 100;
 }
 
 #menu nav {
